# io

./: .gitignore  README.md  mkdocs.yml  mkdocs2.yml  pyproject.toml  tasks.py
.github/: FUNDING.yml
.github/workflows/: build-and-deploy.yml
_draft/: hello-world.md
_historic/_drafts/: 251117-story4raid.md  Nogizaka46.md
_scm/: main.py
docs/: index.md
docs/101camp/: index.md
docs/ANN/: 20170910-pressone.md  20200222-ZQ42-ANN-IMHO.md  20200222-ZQ42-ANN-historic.md  20200223-ZoomQuiet42-ANN-0-aaaagin.md  20200302-ZQ42-ANN-NINAN.md  index.md
docs/About/: 20130809-hello-world.md  20241015-zoomquiet.md  affiliate.md  default.md  design.md  friendly-links.md  index.md  linking.md  zoomquiet.md
docs/IMHO/: index.md
docs/MurMur/: 20141223-zoomquiet4KO.md  index.md
docs/OldTouch/: 20131219-jekyll2pelican.md  20200225-ZoomQuiet-OldTouch-DebugUself.md  20200225-ZoomQuiet-OldTouch-abt.md  20200225-ZoomQuiet-OldTouch-booking.md  20200225-ZoomQuiet-OldTouch-tech.md  20200226-ZoomQuiet-OldTouch-CPUG.md  20200227-ZoomQuiet-OldTouch-jianshu.md  20200304-ZoomQuiet-OldTouch-380.md  20210807-OldTouch-APISIX.md
docs/Pythonic/: 20131023-why0base-indexing-python.md  20140126-inti-my-qpy-env.md  20141126-top10-Py-idioms-wish-learned-earlier.md  20141127-ipynb-into-blog.md  201609DSLs-atop-openrety.md  20200108-ex-map-enum.md  20200331-ZoomQuiet-MurMur-dnsad.md  (+8 more)
inv/: README.md  conf.py  latestor.py  mdbook.py  mkdocs.py
site/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
src/: SUMMARY.md
(+706 files in other folders)
